# gcc-oil-forecast

./: .gitattributes  .gitignore  .ruff.toml  CODE_REVIEW.md  DEPLOYMENT_SUMMARY.md  LICENSE  README.md  api_simple.py  mlflow.db  pyproject.toml  requirements.txt  run_api.py  run_streamlit.py  start.sh
.github/workflows/: ci.yml
api/: __init__.py  main.py  schemas.py
app/: Home.py  __init__.py
app/pages/: 1_📊_EDA.py  2_⚙️_Features.py  3_🤖_Modeling.py  4_🔍_Explainability.py  5_📈_Forecasts_Dashboard.py
data/raw/: renewable-energy-installed-capacity-and-electricity-production.csv  saudi-crude-oil-production-from-sama-annual-statistics-2015-dec.csv
docker/: Dockerfile.app  docker-compose.yml
docs/: CHANGELOG.md  api_contract.md  architecture.md  model_card.md  ops_runbook.md  validation_report.md
docs/screenshots/: README.md
mlflow/: mlflow.db  mlflow.sh
notebooks/: 01_data_collection_cleaning.ipynb  02_eda_visualization.ipynb  03_feature_engineering.ipynb  04_model_training_tuning.ipynb  05_validation_shap.ipynb  06_deployment_integration.ipynb
src/: __init__.py  config.py  logging_conf.py
src/data/: __init__.py  cleaning.py  loaders.py  transforms.py
src/evaluation/: __init__.py  backtest.py  metrics.py
src/features/: build_features.py
src/models/: __init__.py  forecast.py  registry.py  train.py
src/utils/: io.py
tests/: test_api.py  test_features.py  test_loaders.py  test_train.py  test_transforms.py
