[project]
name = "gcc-oil-forecast"
version = "0.1.0"
description = "GCC crude oil production forecasting with explainable AI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Data Scientist", email = "data.scientist@example.com" }
]

[project.dependencies]
pandas = "^2.0"
numpy = "^1.25"
scikit-learn = "^1.3"
xgboost = "^1.7"
lightgbm = "^4.0"
catboost = "^1.2"
matplotlib = "^3.7"
seaborn = "^0.12"
shap = "^0.41"
mlflow = "^2.3"
fastapi = "^0.110"
uvicorn = { extras = ["standard"], version = "^0.22" }
streamlit = "^1.25"
pydantic = "^2.0"
python-dotenv = "^1.0"
optuna = "^3.1"
tqdm = "^4.66"
requests = "^2.31"
rich = "^13.5"
loguru = "^0.7"

# Development and testing dependencies
[project.optional-dependencies]
dev = [
  "pytest >=7.0",
  "ruff >=0.1.3",
  "ipykernel",
  "nbformat",
  "jupyterlab"
]

[tool.ruff]
# Use modern Python syntax and set a sensible line length
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "B"]
ignore = ["E501"]
